WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304505
Incorrect indentation in TextBoxPainter's c'tor
https://bugs.webkit.org/show_bug.cgi?id=304505
Summary
Incorrect indentation in TextBoxPainter's c'tor
alan
Reported
2025-12-19 09:56:16 PST
ssia
Attachments
[fast-cq]Patch
(1.38 KB, patch)
2025-12-19 09:58 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-12-19 09:58:56 PST
Created
attachment 477797
[details]
[fast-cq]Patch
EWS
Comment 2
2025-12-19 12:44:33 PST
Committed
304770@main
(f5ec9d4548a7): <
https://commits.webkit.org/304770@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477797
[details]
.
Radar WebKit Bug Importer
Comment 3
2025-12-19 12:45:16 PST
<
rdar://problem/166898821
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug