Incorrect indentation in TextBoxPainter's c'tor https://bugs.webkit.org/show_bug.cgi?id=304505

Reviewed by Simon Fraser.

* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::m_haveSelection):

Canonical link: https://commits.webkit.org/304770@main